--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/PaoliPeaks/728x90_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/PaoliPeaks/728x90_PaoliPeaks.htm
@@ -116,7 +116,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left frameText"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -127,7 +127,7 @@
       </div>
       <div id="frameText2" class="text-left frameText"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -138,7 +138,7 @@
       </div>
       <div id="frameText3" class="text-left frameText"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
