--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSunapee/320x50_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSunapee/320x50_MtSunapee.htm
@@ -55,7 +55,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -67,7 +67,7 @@
       </div>
       <div id="frameText2" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -79,8 +79,7 @@
       </div>
       <div id="frameText3" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText3"
-        data-style="text-align:center;"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -102,7 +101,7 @@
         data-text="ctaText"
         data-style="padding:0 6px 0px;"
         style="top: -6px;
-          left: 256px;
+          left: 262px;
           width: 55px;
           height: 18px;
           font-size: 10px;
@@ -177,8 +176,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
@@ -190,8 +189,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
