--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MultiResort/320x50_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MultiResort/320x50_MultiResort.htm
@@ -51,7 +51,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left AvenirNextRegular"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -62,7 +62,7 @@
       </div>
       <div id="frameText2" class="text-left AvenirNextRegular"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -73,8 +73,7 @@
       </div>
       <div id="frameText3" class="text-left AvenirNextRegular"
         data-text="frameText3"
-        data-style="text-align:center;"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -95,7 +94,7 @@
         data-text="ctaText"
         data-style="padding:0px 6px 0px;"
         style="top: -6px;
-          left: 256px;
+          left: 262px;
           width: 55px;
           height: 18px;
           font-size: 10px;
@@ -171,8 +170,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
@@ -184,8 +183,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 cta.dataset.style = 'padding:2px 6px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
