--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/PaoliPeaks/320x50_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/PaoliPeaks/320x50_PaoliPeaks.htm
@@ -116,7 +116,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left frameText"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 180px;
           width: 82px;
@@ -127,7 +127,7 @@
       </div>
       <div id="frameText2" class="text-left frameText"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 180px;
           width: 82px;
@@ -138,8 +138,7 @@
       </div>
       <div id="frameText3" class="text-left frameText"
         data-text="frameText3"
-        data-style="text-align:center;"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 180px;
           width: 82px;
@@ -160,7 +159,7 @@
         data-text="ctaText"
         data-style="padding:1px 6px 0px;"
         style="top: -6px;
-          left: 256px;
+          left: 262px;
           width: 55px;
           height: 18px;
           font-size: 8px;
@@ -451,8 +450,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
