--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Vail/320x50_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Vail/320x50_Vail.htm
@@ -60,7 +60,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left TerminaBlack"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -71,7 +71,7 @@
       </div>
       <div id="frameText2" class="text-left TerminaBlack"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -82,8 +82,7 @@
       </div>
       <div id="frameText3" class="text-left TerminaBlack"
         data-text="frameText3"
-        data-style="text-align:center;"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 3px;
           left: 170px;
           width: 82px;
@@ -104,7 +103,7 @@
         data-text="ctaText"
         data-style="padding:1px 6px 0px;"
         style="top: -6px;
-          left: 256px;
+          left: 262px;
           width: 55px;
           height: 18px;
           font-size: 8px;
@@ -179,8 +178,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
@@ -192,8 +191,8 @@
                 var cta = document.querySelector("#cta");
                 cta.style.right = "4px";
                 cta.style.width = "auto";
-                cta.style.minWidth = "55px";
-                cta.style.maxWidth = "90px";
+                cta.style.minWidth = "50px";
+                cta.style.maxWidth = "70px";
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
