--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Breckenridge/728x90_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Breckenridge/728x90_Breckenridge.htm
@@ -56,7 +56,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left PoppinsSemibold"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 6px;
           left: 442px;
           width: 170px;
@@ -67,7 +67,7 @@
       </div>
       <div id="frameText2" class="text-left PoppinsSemibold"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 6px;
           left: 442px;
           width: 170px;
@@ -78,7 +78,7 @@
       </div>
       <div id="frameText3" class="text-left PoppinsSemibold"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 6px;
           left: 442px;
           width: 170px;
