--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/EpicMountainRentals/728x90_EpicMountainRentals.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/EpicMountainRentals/728x90_EpicMountainRentals.htm
@@ -56,7 +56,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left PromptExtraBold"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -66,7 +66,7 @@
       </div>
       <div id="frameText2" class="text-left PromptExtraBold"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -76,7 +76,7 @@
       </div>
       <div id="frameText3" class="text-left PromptExtraBold"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
