--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/EpicMountainRewards/728x90_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/EpicMountainRewards/728x90_EpicMountainRewards.htm
@@ -51,7 +51,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left AvenirNextBold"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -61,7 +61,7 @@
       </div>
       <div id="frameText2" class="text-left AvenirNextBold"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -71,7 +71,7 @@
       </div>
       <div id="frameText3" class="text-left AvenirNextBold"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
