--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Liberty/728x90_Liberty.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Liberty/728x90_Liberty.htm
@@ -50,7 +50,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left SentinelBook"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -61,7 +61,7 @@
       </div>
       <div id="frameText2" class="text-left SentinelBook"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -72,7 +72,7 @@
       </div>
       <div id="frameText3" class="text-left SentinelBook"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
