--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MtSunapee/728x90_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MtSunapee/728x90_MtSunapee.htm
@@ -55,7 +55,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -67,7 +67,7 @@
       </div>
       <div id="frameText2" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -79,7 +79,7 @@
       </div>
       <div id="frameText3" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
