--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MultiResort/728x90_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MultiResort/728x90_MultiResort.htm
@@ -51,7 +51,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left AvenirNextRegular"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -62,7 +62,7 @@
       </div>
       <div id="frameText2" class="text-left AvenirNextRegular"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -73,7 +73,7 @@
       </div>
       <div id="frameText3" class="text-left AvenirNextRegular"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
