--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/ParkCity/728x90_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/ParkCity/728x90_ParkCity.htm
@@ -60,7 +60,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left FuturaBold"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -70,7 +70,7 @@
       </div>
       <div id="frameText2" class="text-left FuturaBold"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -80,7 +80,7 @@
       </div>
       <div id="frameText3" class="text-left FuturaBold"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
