--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Vail/728x90_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Vail/728x90_Vail.htm
@@ -60,7 +60,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left TerminaBlack"
         data-text="frameText1"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -71,7 +71,7 @@
       </div>
       <div id="frameText2" class="text-left TerminaBlack"
         data-text="frameText2"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
@@ -82,7 +82,7 @@
       </div>
       <div id="frameText3" class="text-left TerminaBlack"
         data-text="frameText3"
-        data-style="text-align:center;"
+        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
