mapped to PT 4 from colorCopyCta

--- a/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/300x250/300x250.html
+++ b/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/300x250/300x250.html
@@ -101,12 +101,12 @@
             subHeadline: "Get 25+ always-free products",
             ctaText: 'Finish signing up for Azure &amp;#x276F;',//"Your $200 credit awaits",
             clickURL: 'https://www.adobe.com/#MS',
-            colorCopyCta: '#FF0000',
             impressionTracker: 'images/1x1.png'
           },
           feed: [
             {
               name: 'ms',
+              passthroughfield4:'#FF00FF',
             }
           ],
           staticData: {
@@ -163,11 +163,11 @@
           ad.layers.cta.style.webkitTransform = '';
           ad.layers.cta.style.transform = '';
           // ad.layers.cta.style.backgroundColor = '#ff0000';
-          if(adData.colorCopyCta.indexOf('|') != -1){
-            ad.layers.headline.style.color = adData['colorCopyCta'].split('|')[0];
-            ad.layers.cta.style.color = adData['colorCopyCta'].split('|')[1];
+          if(adData.passthroughfield4.indexOf('|') != -1){
+            ad.layers.headline.style.color = adData['passthroughfield4'].split('|')[0];
+            ad.layers.cta.style.color = adData['passthroughfield4'].split('|')[1];
           }else{
-            ad.layers.headline.style.color = ad.layers.cta.style.color = adData['colorCopyCta'];
+            ad.layers.headline.style.color = ad.layers.cta.style.color = adData['passthroughfield4'];
           }
           
         });
