--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Stowe/160x600_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Stowe/160x600_Stowe.htm
@@ -11,7 +11,7 @@
     <style media="screen">
       @font-face {
           font-family: Raleway-Bold;
-          src: url('fonts/AvenirLTStd-Book.woff') format("woff");
+          src: url('fonts/Raleway-Bold.woff') format("woff");
       }
       .Raleway-Bold { font-family: Raleway-Bold; }
 
@@ -60,7 +60,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text athena"
@@ -71,7 +71,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text athena"
@@ -82,7 +82,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.3;">
       </div>
       <div id="cta" class="text Raleway-Bold"
@@ -94,7 +94,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          /*          letter-spacing: 1.1px;*/
           border-radius: 15px;
           color: #fff;">
       </div>
