--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
@@ -70,7 +70,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -80,7 +80,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -90,7 +90,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="cta" class="text vinila-variable"
@@ -103,7 +103,7 @@
           height: 40px;
           font-size: 18px;
           line-height: 22px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /*border-radius: 20px;*/">
       </div>
