--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/BeaverCreek/300x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/BeaverCreek/300x600_BeaverCreek.htm
@@ -71,7 +71,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text ivypresto-display"
@@ -82,7 +82,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text ivypresto-display"
@@ -93,7 +93,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="cta" class="text vinila-variable"
@@ -105,7 +105,7 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /*border-radius: 15px;*/">
       </div>
