--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Stowe/320x50_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Stowe/320x50_Stowe.htm
@@ -11,7 +11,7 @@
     <style media="screen">
       @font-face {
           font-family: Raleway-Bold;
-          src: url('fonts/AvenirLTStd-Book.woff') format("woff");
+          src: url('fonts/Raleway-Bold.woff') format("woff");
       }
       .Raleway-Bold { font-family: Raleway-Bold; }
 
@@ -59,7 +59,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          font-weight: bold;
+          /*          /*          font-weight: bold;*/*/
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left athena"
@@ -69,7 +69,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          font-weight: bold;
+          /*          /*          font-weight: bold;*/*/
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left athena"
@@ -79,7 +79,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          font-weight: bold;
+          /*          /*          font-weight: bold;*/*/
           line-height: 1.1;">
       </div>
       <div id="cta" class="text Raleway-Bold"
@@ -91,7 +91,7 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0.5px;
+/*          letter-spacing: 0.5px;*/
           border-radius: 12px;
           color: #fff;">
       </div>
