--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/Stowe/728x90_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/Stowe/728x90_Stowe.htm
@@ -11,7 +11,7 @@
     <style media="screen">
       @font-face {
           font-family: Raleway-Bold;
-          src: url('fonts/AvenirLTStd-Book.woff') format("woff");
+          src: url('fonts/Raleway-Bold.woff') format("woff");
       }
       .Raleway-Bold { font-family: Raleway-Bold; }
 
@@ -59,7 +59,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          font-weight: bold;
+          /*          /*          font-weight: bold;*/*/
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left athena"
@@ -69,7 +69,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          font-weight: bold;
+          /*          /*          font-weight: bold;*/*/
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left athena"
@@ -79,7 +79,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          font-weight: bold;
+          /*          /*          font-weight: bold;*/*/
           line-height: 1.1;">
       </div>
       <div id="cta" class="text Raleway-Bold"
@@ -91,7 +91,7 @@
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          /*          letter-spacing: 1.1px;*/
           border-radius: 12px;
           color: #fff;">
       </div>
