--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
@@ -71,7 +71,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -81,7 +81,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -91,7 +91,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="cta" class="text vinila-variable"
@@ -103,7 +103,7 @@
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /* border-radius: 15px; */">
       </div>
