--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Stowe/300x600_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Stowe/300x600_Stowe.htm
@@ -11,7 +11,7 @@
     <style media="screen">
       @font-face {
           font-family: Raleway-Bold;
-          src: url('fonts/AvenirLTStd-Book.woff') format("woff");
+          src: url('fonts/Raleway-Bold.woff') format("woff");
       }
       .Raleway-Bold { font-family: Raleway-Bold; }
 
@@ -61,7 +61,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text athena"
@@ -72,7 +72,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text athena"
@@ -83,7 +83,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.15;">
       </div>
       <div id="cta" class="text Raleway-Bold"
@@ -95,7 +95,7 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 2.2px;
+/*          letter-spacing: 2.2px;*/
           border-radius: 15px;
           color: #fff;">
       </div>
