--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
@@ -71,7 +71,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -81,7 +81,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -91,7 +91,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.1;">
       </div>
       <div id="cta" class="text vinila-variable"
@@ -103,7 +103,7 @@
           height: 30px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /*border-radius: 12px;*/;">
       </div>
