--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
@@ -71,7 +71,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -81,7 +81,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -91,7 +91,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="cta" class="text vinila-variable"
@@ -104,7 +104,7 @@
           height: 40px;
           font-size: 18px;
           line-height: 22px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /*border-radius: 20px;*/;">
       </div>
