--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
@@ -73,7 +73,7 @@
           width: 130px;
           height: 70px;
           font-size: 18px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text ivypresto-display"
@@ -84,7 +84,7 @@
           width: 130px;
           height: 70px;
           font-size: 18px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text ivypresto-display"
@@ -95,7 +95,7 @@
           width: 130px;
           height: 70px;
           font-size: 18px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.1;">
       </div>
       <div id="disclaimerText" class="text-right ivypresto-display"
@@ -115,7 +115,7 @@
           height: 28px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /*border-radius: 15px;*/">
       </div>
