--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
@@ -72,7 +72,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -82,7 +82,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -92,7 +92,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.15;">
       </div>
       <div id="disclaimerText" class="text-right ivypresto-display"
@@ -112,7 +112,7 @@
           height: 25px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /* border-radius: 15px; */">
       </div>
