--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Stowe/320x50_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Stowe/320x50_Stowe.htm
@@ -11,7 +11,7 @@
     <style media="screen">
       @font-face {
           font-family: Raleway-Bold;
-          src: url('fonts/AvenirLTStd-Book.woff') format("woff");
+          src: url('fonts/Raleway-Bold.woff') format("woff");
       }
       .Raleway-Bold { font-family: Raleway-Bold; }
 
@@ -62,7 +62,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left athena"
@@ -73,7 +73,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left athena"
@@ -84,7 +84,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.1;">
       </div>
       <div id="disclaimerText" class="text-right AlternateGothicATFMedium"
@@ -104,7 +104,7 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0.5px;
+/*          letter-spacing: 0.5px;*/
           border-radius: 12px;
           color: #fff;">
       </div>
