--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
@@ -72,7 +72,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -82,7 +82,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -92,7 +92,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           line-height: 1.13;">
       </div>
       <div id="disclaimerText" class="text-right ivypresto-display"
@@ -113,7 +113,7 @@
           height: 40px;
           font-size: 18px;
           line-height: 22px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0
           border: 1px solid #fff;
           /*border-radius: 20px;*/">
       </div>
