--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/Stowe/970x250_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/Stowe/970x250_Stowe.htm
@@ -11,7 +11,7 @@
     <style media="screen">
       @font-face {
           font-family: Raleway-Bold;
-          src: url('fonts/AvenirLTStd-Book.woff') format("woff");
+          src: url('fonts/Raleway-Bold.woff') format("woff");
       }
       .Raleway-Bold { font-family: Raleway-Bold; }
 
@@ -61,7 +61,7 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left athena"
@@ -71,7 +71,7 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left athena"
@@ -81,7 +81,7 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          font-weight: bold;
+          /*          font-weight: bold;*/
           line-height: 1.13;">
       </div>
       <div id="disclaimerText" class="text-right AlternateGothicATFMedium"
@@ -102,7 +102,7 @@
           height: 40px;
           font-size: 17px;
           line-height: 22px;
-          letter-spacing: 0.2em;
+/*          letter-spacing: 0.2em;*/
           border-radius: 20px;
           color: #fff;">
       </div>
