--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
@@ -70,7 +70,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -80,7 +80,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -90,19 +90,19 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="padding:0 10px 1px;"
+        data-style="padding:3px 10px 1px;"
         style="top: 194px;
           left: 201px;
           width: 87px;
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0.025em;
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /* border-radius: 15px; */">
       </div>
@@ -172,7 +172,7 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "90px";
                 cta.style.maxWidth = "140px";
-                cta.dataset.style = 'padding:0px 10px 0px;';
+                cta.dataset.style = 'padding:3px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                   frameText[i].style.left = '15px';
@@ -187,7 +187,7 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "90px";
                 cta.style.maxWidth = "140px";
-                cta.dataset.style = 'padding:0px 10px 0px;';
+                cta.dataset.style = 'padding:3px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                   frameText[i].style.left = '15px';
