--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Hunter/300x600_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Hunter/300x600_Hunter.htm
@@ -51,33 +51,30 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text GalanoGrotesqueBold"
+      <div id="frameText1" class="text-left GalanoGrotesqueBold"
         data-text="frameText1"
-        data-style="text-align:center;"
         style="top: 464px;
-          left: 20px;
+          left: 15px;
           width: 260px;
           height: 72px;
           font-size: 25px;
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text GalanoGrotesqueBold"
+      <div id="frameText2" class="text-left GalanoGrotesqueBold"
         data-text="frameText2"
-        data-style="text-align:center;"
         style="top: 464px;
-          left: 20px;
+          left: 15px;
           width: 260px;
           height: 72px;
           font-size: 25px;
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text GalanoGrotesqueBold"
+      <div id="frameText3" class="text-left GalanoGrotesqueBold"
         data-text="frameText3"
-        data-style="text-align:center;"
         style="top: 464px;
-          left: 20px;
+          left: 15px;
           width: 260px;
           height: 72px;
           font-size: 25px;
@@ -95,7 +92,7 @@
           line-height: 20px;
           letter-spacing: 0.05em;
           border-radius: 15px;
-          color: #FAF9F3;>
+          color: #FAF9F3;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -170,7 +167,7 @@
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {x:0,y:0}, '#productLableLogo': {css:{display:'block'}}}";
                 var cta = document.querySelector("#cta");
-                cta.style.left = "20px";
+                cta.style.left = "15px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "120px";
                 cta.style.maxWidth = "145px";
