--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x600/BeaverCreek/300x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x600/BeaverCreek/300x600_BeaverCreek.htm
@@ -73,7 +73,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text ivypresto-display"
@@ -84,7 +84,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text ivypresto-display"
@@ -95,7 +95,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="disclaimerText" class="text-right ivypresto-display"
@@ -108,14 +108,14 @@
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="padding:0 12px 2px;"
+        data-style="padding:3px 12px 2px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 0
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /*border-radius: 15px;*/">
       </div>
@@ -196,7 +196,7 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "120px";
                 cta.style.maxWidth = "145px";
-                cta.dataset.style = 'padding:0px 8px 0px;';
+                cta.dataset.style = 'padding:3px 8px 0px;';
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px';
               }
