--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Hunter/160x600_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Hunter/160x600_Hunter.htm
@@ -51,33 +51,30 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text GalanoGrotesqueBold"
+      <div id="frameText1" class="text-left GalanoGrotesqueBold"
         data-text="frameText1"
-        data-style="text-align:center;"
         style="top: 457px;
-          left: 15px;
+          left: 11px;
           width: 130px;
           height: 70px;
           font-size: 15px;
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text GalanoGrotesqueBold"
+      <div id="frameText2" class="text-left GalanoGrotesqueBold"
         data-text="frameText2"
-        data-style="text-align:center;"
         style="top: 457px;
-          left: 15px;
+          left: 11px;
           width: 130px;
           height: 70px;
           font-size: 15px;
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text GalanoGrotesqueBold"
+      <div id="frameText3" class="text-left GalanoGrotesqueBold"
         data-text="frameText3"
-        data-style="text-align:center;"
         style="top: 457px;
-          left: 15px;
+          left: 11px;
           width: 130px;
           height: 70px;
           font-size: 15px;
@@ -95,7 +92,7 @@
           line-height: 20px;
           letter-spacing: 0.05em;
           border-radius: 15px;
-          color: #FAF9F3;>
+          color: #FAF9F3;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
