--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
@@ -70,7 +70,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -80,7 +80,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -90,19 +90,19 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="padding:1px 10px 1px;"
+        data-style="padding:3px 10px 1px;"
         style="top: 29px;
           left: 623px;
           width: 94px;
           height: 30px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /*border-radius: 12px;*/">
       </div>
