--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
@@ -72,7 +72,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text ivypresto-display"
@@ -83,7 +83,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text ivypresto-display"
@@ -94,19 +94,19 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.3;">
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="text-align:center;padding:0 8px 0px;"
+        data-style="text-align:center;padding:3px 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
           height: 28px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 0
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /*border-radius: 15px;*/">
       </div>
