--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/Hunter/160x600_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/Hunter/160x600_Hunter.htm
@@ -52,33 +52,30 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text GalanoGrotesqueBold"
+      <div id="frameText1" class="text-left GalanoGrotesqueBold"
         data-text="frameText1"
-        data-style="text-align:center;"
         style="top: 457px;
-          left: 15px;
+          left: 11px;
           width: 130px;
           height: 70px;
           font-size: 15px;
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text GalanoGrotesqueBold"
+      <div id="frameText2" class="text-left GalanoGrotesqueBold"
         data-text="frameText2"
-        data-style="text-align:center;"
         style="top: 457px;
-          left: 15px;
+          left: 11px;
           width: 130px;
           height: 70px;
           font-size: 15px;
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text GalanoGrotesqueBold"
+      <div id="frameText3" class="text-left GalanoGrotesqueBold"
         data-text="frameText3"
-        data-style="text-align:center;"
         style="top: 457px;
-          left: 15px;
+          left: 11px;
           width: 130px;
           height: 70px;
           font-size: 15px;
@@ -96,7 +93,7 @@
           line-height: 20px;
           letter-spacing: 0.05em;
           border-radius: 15px;
-          color: #FAF9F3;>
+          color: #FAF9F3;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -170,7 +167,7 @@
                 // content.styleProperties = "{'#cta': {x:'-50%',y:-15}, '#productLableLogo': {css:{display:'block'}}}";
                 content.styleProperties = "{'#productLableLogo': {css:{display:'block'}}}";
                 var cta = document.querySelector("#cta");
-                cta.style.left = "10px";
+                cta.style.left = "11px";
                 cta.style.width = "70px";
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 if(cta.querySelector('span').offsetHeight > 20) {
