--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
@@ -64,46 +64,49 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left ivypresto-display"
+      <div id="frameText1" class="text ivypresto-display"
         data-text="frameText1"
+        data-style="text-align: center;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left ivypresto-display"
+      <div id="frameText2" class="text ivypresto-display"
         data-text="frameText2"
+        data-style="text-align: center;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left ivypresto-display"
+      <div id="frameText3" class="text ivypresto-display"
         data-text="frameText3"
+        data-style="text-align: center;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="padding:0 10px 1px;"
+        data-style="padding:3px 10px 1px;"
         style="top: 194px;
           left: 201px;
           width: 87px;
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /* border-radius: 15px; */">
       </div>
@@ -174,7 +177,7 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "90px";
                 cta.style.maxWidth = "140px";
-                cta.dataset.style = 'padding:0px 10px 0px;';
+                cta.dataset.style = 'padding:3px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                   frameText[i].style.left = '15px';
@@ -189,11 +192,11 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "90px";
                 cta.style.maxWidth = "140px";
-                cta.dataset.style = 'padding:0px 10px 0px;';
+                cta.dataset.style = 'padding:3px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                   frameText[i].style.left = '15px';
-                  // frameText[i].style.width = '270px';
+                  frameText[i].style.width = '270px';
                   frameText[i].style.height = '38px';
                   frameText[i].style.textAlign = 'left';
                 }
