--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
@@ -71,7 +71,7 @@
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -81,7 +81,7 @@
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -91,19 +91,19 @@
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="padding:0 6px 0px;"
+        data-style="padding:2px 6px 0px;"
         style="top: 17px;
           left: 256px;
           width: 55px;
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /* border-radius: 12px; */">
       </div>
