--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/Hunter/320x50_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/Hunter/320x50_Hunter.htm
@@ -93,7 +93,7 @@
           line-height: 10px;
           letter-spacing: 0.5px;
           border-radius: 12px;
-          color: #FAF9F3;>
+          color: #FAF9F3;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
