--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/BeaverCreek/970x250_BeaverCreek.htm
@@ -71,7 +71,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left ivypresto-display"
@@ -81,7 +81,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left ivypresto-display"
@@ -91,12 +91,12 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0
+          letter-spacing: 0.9pt;
           line-height: 1.13;">
       </div>
       <div id="cta" class="text vinila-variable"
         data-text="ctaText"
-        data-style="padding:0 20px 0px;"
+        data-style="padding:4px 20px 0px;"
         style="top: 193px;
           left: 623px;
           min-width: 156px;
@@ -104,7 +104,7 @@
           height: 40px;
           font-size: 18px;
           line-height: 22px;
-          letter-spacing: 0
+          letter-spacing: 0.8pt;
           border: 1px solid #fff;
           /*border-radius: 20px;*/;">
       </div>
