--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/PaoliPeaks/970x250_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/PaoliPeaks/970x250_PaoliPeaks.htm
@@ -245,6 +245,7 @@
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#FFFFFF';
                  document.querySelector('#ad').style.color = '#2A51A3';
                  document.querySelector('#cta').style.color = '#2A51A3';
+                 document.querySelector('#disclaimerText').style.color = '#c6c8c8';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('SofiaProBold'); elem.style.letterSpacing = 0; })
@@ -259,6 +260,7 @@
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#000000';
                  document.querySelector('#ad').style.color = '#FFFFFF';
                  document.querySelector('#cta').style.color = '#000000';
+                 document.querySelector('#disclaimerText').style.color = '#FFFFFF';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('InterstateBold'); elem.style.letterSpacing = 0;})
@@ -348,6 +350,7 @@
                  document.querySelector('#topWhitePatch').style.backgroundColor = '#4F2683';
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#FFFFFF';
                  document.querySelector('#ad').style.color = '#4F2683';
+                 document.querySelector('#disclaimerText').style.color = '#58595b';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('MuseoSlab900') })
@@ -398,6 +401,7 @@
                 document.querySelector('#topWhitePatch').style.backgroundColor = '#FFFFFF';
                 document.querySelector('#bottomWhitePatch').style.backgroundColor = '#FFFFFF';
                 document.querySelector('#ad').style.color = '#233D34';
+                document.querySelector('#disclaimerText').style.color = '#333333';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('PromptBold') })
