--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Stowe/160x600_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Stowe/160x600_Stowe.htm
@@ -9,11 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      @font-face {
-          font-family: Raleway-Bold;
-          src: url('fonts/Raleway-Bold.woff') format("woff");
+       @font-face {
+          font-family: Raleway-Regular;
+          src: url('fonts/Raleway-Regular.woff') format("woff");
       }
-      .Raleway-Bold { font-family: Raleway-Bold; }
+      .Raleway-Regular { font-family: Raleway-Regular; }
 
       .athena {
         font-family: "athena", sans-serif;
@@ -60,7 +60,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          /*          font-weight: bold;*/
+          /*font-weight: bold;*/
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text athena"
@@ -85,23 +85,23 @@
           /*font-weight: bold;*/
           line-height: 1.3;">
       </div>
-      <div id="cta" class="text Raleway-Bold"
+      <div id="cta" class="text Raleway-Regular"
         data-text="ctaText"
-        data-style="text-align:center;padding:3px 8px 0px;"
+        data-style="text-align:center;padding:1px 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          /* letter-spacing: 1.1px;*/
+          letter-spacing: 1pt;
           border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="Raleway-Bold">Raleway-Bold</div>
+      <div class="Raleway-Regular">Raleway-Regular</div>
       <div class="athena">athena</div>
     </div>
     <script type="text/javascript">
