--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Stowe/970x250_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Stowe/970x250_Stowe.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: Raleway-Bold;
-          src: url('fonts/Raleway-Bold.woff') format("woff");
+          font-family: Raleway-Regular;
+          src: url('fonts/Raleway-Regular.woff') format("woff");
       }
-      .Raleway-Bold { font-family: Raleway-Bold; }
+      .Raleway-Regular { font-family: Raleway-Regular; }
 
       .athena {
         font-family: "athena", sans-serif;
@@ -59,7 +59,6 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          /*          /*          font-weight: bold;*/*/
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left athena"
@@ -69,7 +68,6 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          /*          /*          font-weight: bold;*/*/
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left athena"
@@ -79,12 +77,11 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          /*          /*          font-weight: bold;*/*/
           line-height: 1.13;">
       </div>
-      <div id="cta" class="text Raleway-Bold"
+      <div id="cta" class="text Raleway-Regular"
         data-text="ctaText"
-        data-style="padding:4px 20px 0px;"
+        data-style="padding: 1px 20px 0px;"
         style="top: 193px;
           left: 623px;
           min-width: 156px;
@@ -92,14 +89,14 @@
           height: 40px;
           font-size: 17px;
           line-height: 22px;
-/*          /*          letter-spacing: 0.2em;*/*/
+         letter-spacing: 1pt;
           border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="Raleway-Bold">Raleway-Bold</div>
+      <div class="Raleway-Regular">Raleway-Regular</div>
       <div class="athena">athena</div>
     </div>
     <script type="text/javascript">
