--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/Stowe/300x250_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/Stowe/300x250_Stowe.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: Raleway-Bold;
-          src: url('fonts/Raleway-Bold.woff') format("woff");
+          font-family: Raleway-Regular;
+          src: url('fonts/Raleway-Regular.woff') format("woff");
       }
-      .Raleway-Bold { font-family: Raleway-Bold; }
+      .Raleway-Regular { font-family: Raleway-Regular; }
 
       .athena {
         font-family: "athena", sans-serif;
@@ -83,23 +83,23 @@
           /*          font-weight: bold;*/
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text Raleway-Bold"
+      <div id="cta" class="text Raleway-Regular"
         data-text="ctaText"
-        data-style="padding:2px 10px 0px;"
+        data-style="padding:1px 10px 0px;"
         style="top: 194px;
           left: 201px;
           width: 87px;
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-/*          letter-spacing: 1px;*/
+         letter-spacing: 1pt;
           border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="Raleway-Bold">Raleway-Bold</div>
+      <div class="Raleway-Regular">Raleway-Regular</div>
       <div class="athena">athena</div>
     </div>
     <script type="text/javascript">
