--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/PaoliPeaks/160x600_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/PaoliPeaks/160x600_PaoliPeaks.htm
@@ -250,6 +250,7 @@
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#FFFFFF';
                  document.querySelector('#ad').style.color = '#2A51A3';
                  document.querySelector('#cta').style.color = '#2A51A3';
+                 document.querySelector('#disclaimerText').style.color = '#c6c8c8';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('SofiaProBold'); elem.style.letterSpacing = 0; })
@@ -264,6 +265,7 @@
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#000000';
                  document.querySelector('#ad').style.color = '#FFFFFF';
                  document.querySelector('#cta').style.color = '#000000';
+                 document.querySelector('#disclaimerText').style.color = '#FFFFFF';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('InterstateBold'); elem.style.letterSpacing = 0; })
@@ -353,6 +355,7 @@
                  document.querySelector('#topWhitePatch').style.backgroundColor = '#4F2683';
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#FFFFFF';
                  document.querySelector('#ad').style.color = '#4F2683';
+                 document.querySelector('#disclaimerText').style.color = '#58595b';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('MuseoSlab900') })
@@ -403,6 +406,7 @@
                 document.querySelector('#topWhitePatch').style.backgroundColor = '#FFFFFF';
                 document.querySelector('#bottomWhitePatch').style.backgroundColor = '#FFFFFF';
                 document.querySelector('#ad').style.color = '#233D34';
+                document.querySelector('#disclaimerText').style.color = '#333333';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('PromptBold') })
