--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x600/MultiResort/300x600_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x600/MultiResort/300x600_MultiResort.htm
@@ -87,7 +87,7 @@
         style="bottom: -5px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #FFFFFF;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text AvenirNextRegular"
