--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MultiResort/320x50_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MultiResort/320x50_MultiResort.htm
@@ -87,7 +87,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #C7DBEB;
+          color: #FFFFFF;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text AvenirNextRegular"
@@ -168,6 +168,7 @@
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {y:13}}";
                 var cta = document.querySelector("#cta");
+                cta.style.left = "auto";
                 cta.style.right = "4px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "50px";
@@ -181,6 +182,7 @@
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {y:13}, '#productLableLogo': {css:{display:'block'}}}";
                 var cta = document.querySelector("#cta");
+                cta.style.left = "auto";
                 cta.style.right = "4px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "50px";
