--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/MultiResort/970x250_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/MultiResort/970x250_MultiResort.htm
@@ -84,7 +84,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #FFFFFF;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text AvenirNextRegular"
