--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/Stowe/970x250_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/Stowe/970x250_Stowe.htm
@@ -9,11 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      @font-face {
-          font-family: Raleway-Bold;
-          src: url('fonts/Raleway-Bold.woff') format("woff");
+       @font-face {
+          font-family: Raleway-Regular;
+          src: url('fonts/Raleway-Regular.woff') format("woff");
       }
-      .Raleway-Bold { font-family: Raleway-Bold; }
+      .Raleway-Regular { font-family: Raleway-Regular; }
 
       .athena {
         font-family: "athena", sans-serif;
@@ -92,9 +92,9 @@
           color: #74838E;
           letter-spacing: -0.1px;">
       </div>
-      <div id="cta" class="text Raleway-Bold"
+      <div id="cta" class="text Raleway-Regular"
         data-text="ctaText"
-        data-style="padding:4px 20px 0px;"
+        data-style="padding:1px 20px 0px;"
         style="top: 193px;
           left: 623px;
           min-width: 156px;
@@ -102,14 +102,14 @@
           height: 40px;
           font-size: 17px;
           line-height: 22px;
-/*          letter-spacing: 0.2em;*/
+         letter-spacing: 1pt;
           border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="Raleway-Bold">Raleway-Bold</div>
+      <div class="Raleway-Regular">Raleway-Regular</div>
       <div class="athena">athena</div>
     </div>
     <script type="text/javascript">
